--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -28,7 +28,7 @@
                             }
                         </style>
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center' + layout_template + ' ' + layout_color}">
-                            <div class="row mt-5 pt-5 mb-2">
+                            <div class="row mt-5 pt-5 mb-1">
                                 <div class="col-12 mt-5 pt-5">
                                     <h1 class="fn_font my-1 py-1" style="text-transform: uppercase !important;">
                                         Certificate
@@ -36,7 +36,7 @@
                                     </h1>
                                 </div>
                             </div>
-                            <div class="row mt-2 pt-1">
+                            <div class="row mt-1 mb-1 pt-1 ">
                                 <div class="col-12  mt-1 pt-1">
                                     <p class="mt-5 pt-5">This certificate is presented to</p>
                                 </div>
