--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -59,8 +59,7 @@
                                         </em>
                                         .<br/>Your dedication, perseverance,
                                         and hard work have not only earned you this certification but also reflect your
-                                        commitment to excellence. Your efforts have made a meaningful impact, and we are
-                                        incredibly proud of your achievement. This accomplishment demonstrates your
+                                        commitment to excellence. This accomplishment demonstrates your
                                         ability to rise to challenges and excel, and we look forward to witnessing your
                                         continued success in future endeavors.
                                     </p>
