--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -29,29 +29,29 @@
                         </style>
 
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center' + layout_template + ' ' + layout_color}">
-                            <div class="row mt-5 pt-5 mb-1">
+                            <div class="row mt-5 pt-5 mb-1 fn_font">
                                 <div class="col-12 mt-5 pt-5">
-                                    <h1 class="fn_font my-1 py-1" style="text-transform: uppercase !important;">
+                                    <h1 class="my-1 py-1" style="text-transform: uppercase !important;">
                                         Certificate
                                         <span t-if="user_input.scoring_success">of Achievement</span>
                                     </h1>
                                 </div>
                             </div>
-                            <div class="row mt-1 mb-3 pt-1 ">
+                            <div class="row mt-1 mb-3 pt-1 fn_font">
                                 <div class="col-12  mt-4 pt-4">
                                     <p class="mt-1 pt-1">This certificate is presented to</p>
                                 </div>
                             </div>
-                            <div class="row mt-5 mb-1">
+                            <div class="row mt-5 mb-1 fn_font">
                                 <div class="col-12">
                                     <h1>
                                         <t t-esc="user_input.partner_id.name or user_input.email"/>
                                     </h1>
                                 </div>
                             </div>
-                            <div class="row px-5 mx-5 mt-5">
+                            <div class="row px-5 mx-5 mt-5 fn_font">
                                 <div class="col-12 px-5 my-1">
-                                    <p class="fn_font mx-2" t-if="user_input.scoring_success">For successfully
+                                    <p class="mx-2" t-if="user_input.scoring_success">For successfully
                                         completing
                                         <em>
                                             <t t-esc="user_input.survey_id.display_name"/>
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
 
-                            <div class="row m-5 p-4" t-if="user_input.scoring_success">
+                            <div class="row m-5 p-4 fn_font" t-if="user_input.scoring_success">
                                 <div class="col-12 mt-3 pt-3 px-5" style="text-align: right">
                                     <p class="m-1" style="border-top: 10px solid rgba(255,255,255,0) !important;">Certification n°
                                         <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
