--- a/report/custom_survey_reports.xml
+++ b/report/custom_survey_reports.xml
@@ -15,15 +15,14 @@
             <field name="paperformat_id" ref="paperformat_survey_certification"/>
         </record>-->
 
-        <record id="certification_report_1" model="ir.actions.report">
-            <field name="name">Certificate of Completion</field>
+        <record id="action_certification_report" model="ir.actions.report">
+            <field name="name">Certification Report</field>
             <field name="model">survey.user_input</field>
             <field name="report_type">qweb-pdf</field>
             <field name="report_name">survey.certification_report_view</field>
-            <field name="report_file">survey.certification_report_view</field>
-            <field name="print_report_name">'Certificate - %s' % (object.survey_id.display_name)</field>
+            <field name="print_report_name">'Certification - %s - %s' % (object.survey_id.display_name, object.partner_id.name) </field>
+            <field name="binding_model_id" ref="survey.model_survey_user_input"/>
             <field name="binding_type">report</field>
-            <field name="paperformat_id" ref="paperformat_survey_certification"/>
         </record>
     </data>
 </odoo>
