--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -53,27 +53,28 @@
                                 <div class="col-12 px-5 my-1">
                                     <p class="mx-2" t-if="user_input.scoring_success">For successfully
                                         completing
-                                        <em>
-                                            <t t-esc="user_input.survey_id.display_name"/>
-                                        </em>
+                                        <t t-esc="user_input.survey_id.display_name"/>
                                         .<br/>Your dedication, perseverance,
                                         and hard work have not only earned you this certification but also reflect your
                                         commitment to excellence. This accomplishment demonstrates your
                                         ability to rise to challenges and excel, and we look forward to witnessing your
                                         continued success in future endeavors.
                                     </p>
-                                    <p class="mx-1" t-else=" ">for taking the
-                                        <em>
-                                            <t t-esc="user_input.survey_id.display_name"/>
-                                        </em>
-                                        course.
+                                    <p class="mx-1" t-else=" ">For taking the
+                                        <t t-esc="user_input.survey_id.display_name"/>
+                                        .<br/>Your dedication, perseverance,
+                                        and hard work have not only earned you this certification but also reflect your
+                                        commitment to excellence. This accomplishment demonstrates your
+                                        ability to rise to challenges and excel, and we look forward to witnessing your
+                                        continued success in future endeavors.
                                     </p>
                                 </div>
                             </div>
 
                             <div class="row m-5 p-4 fn_font" t-if="user_input.scoring_success">
                                 <div class="col-12 mt-3 pt-3 px-5" style="text-align: right">
-                                    <p class="m-1" style="border-top: 10px solid rgba(255,255,255,0) !important;">Certification n°
+                                    <p class="m-1" style="border-top: 10px solid rgba(255,255,255,0) !important;">
+                                        Certification n°
                                         <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                     </p>
                                 </div>
