--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -71,15 +71,13 @@
                                 </div>
                             </div>
 
-                            <div class="row m-5 p-4 fn_font" t-if="user_input.scoring_success">
-                                <div class="col-12 mt-3 pt-3 px-5 d-flex justify-content-between align-items-center">
+                            <div class="row m-5 p-4 fn_font" t-if="user_input.scoring_success" style="border: 1px solid black !important;">
+                                <div class="col-12 mt-3 pt-3 px-5" style="text-align: right">
                                     <p class="m-1" style="border-top: 10px solid rgba(255,255,255,0) !important;">
                                         Certification n°
                                         <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
-                                    </p>
-                                    <p class="m-1">
-                                        Date:
-                                        <span t-esc="user_input.create_date.strftime('%d-%m-%Y')"/>
+                                        <br/>
+                                        <span>Date: <t t-esc="user_input.create_date.strftime('%d-%mm-%Y')"/></span>
                                     </p>
                                 </div>
                             </div>
